# statFEM_analysis

./: .gitignore  Dockerfile  README.md  requirements.txt  setup.cfg
docs/: 00_oneDim.html  01_twoDim.html  02_oneDim_prior_results.html  03_oneDim_posterior_results.html  04_twoDim_prior_results.html  04_twoDim_prior_results.ipynb  05_twoDim_posterior_results.html  06_maxDist.html  07_oneDim_prior_max_results.html  08_oneDim_posterior_max_results.html  08_oneDim_posterior_max_results.ipynb  Notebooks.html  README.html  genindex.html  index.html  modules.html  objects.inv  one_dim_matern_posterior.html  one_dim_matern_posterior_max.html  one_dim_matern_prior.html  one_dim_matern_prior_max.html  py-modindex.html  scripts.html  search.html  searchindex.js  statFEM_analysis.html  two_dim_matern_posterior.html  two_dim_matern_prior.html
docs/_modules/: index.html
docs/_sources/: 07_oneDim_prior_max_results.ipynb.txt  README.md.txt  modules.rst.txt  one_dim_matern_prior.rst.txt  one_dim_matern_prior_max.rst.txt  scripts.rst.txt  two_dim_matern_posterior.rst.txt
docs/doctrees/: 00_oneDim.doctree  01_twoDim.doctree  02_oneDim_prior_results.doctree  03_oneDim_posterior_results.doctree  04_twoDim_prior_results.doctree  05_twoDim_posterior_results.doctree  06_maxDist.doctree  07_oneDim_prior_max_results.doctree  Notebooks.doctree  (+13 more)
notebooks/: 00_oneDim.ipynb  01_twoDim.ipynb  02_oneDim_prior_results.ipynb  03_oneDim_posterior_results.ipynb  04_twoDim_prior_results.ipynb  06_maxDist.ipynb
scripts/: oneDim_posterior_matern.py  oneDim_prior_matern.py  twoDim_prior_matern.py
(+24 files in other folders)
