[metadata]
name = statFEM_analysis
version = 0.0.1
author = Yanni Papandreou
author_email = john.papandreou18@imperial.ac.uk
description = Code for the numerical experiments demonstrating our error analysis of the statFEM method.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/YanniPapandreou/statFEM_analysis
project_urls =
    Bug Tracker = https://github.com/YanniPapandreou/statFEM_analysis/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
